--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./server/server.js"
+    "startDev": "nodemon ./server/server.js",
+    "start": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "14.16.1"
   }
 }
